--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
                         <!--===============================QUALIFICATION 1 ===========================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">BSc. in Computer Science</h3>
-                                <span class="qualification__subtitle">University of Westminster</span>
+                                <h3 class="qualification__title">MSc in IT and Strategic Innovation</h3>
+                                <span class="qualification__subtitle">Kingston University</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Aug, 2017 - Sept, 2022
+                                    Jan, 2023 (Reading)
                                 </div>
                             </div>
 
@@ -523,6 +523,20 @@
                             </div>
 
                             <div>
+                                <h3 class="qualification__title">BSc. in Computer Science</h3>
+                                <span class="qualification__subtitle">University of Westminster</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Aug, 2017 - Sept, 2021
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                        <!--===============================QUALIFICATION 3 ===========================-->
+                        <div class="qualification__data">
+                            <div>
                                 <h3 class="qualification__title">GCE OL & GCE AL</h3>
                                 <span class="qualification__subtitle">Kingswood College</span>
                                 <div class="qualification__calendar">
@@ -531,25 +545,10 @@
                                 </div>
                             </div>
 
-
-                        </div>
-
-                        <!--===============================QUALIFICATION 3 ===========================-->
-                        <!-- <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Secondary School Certificate</h3>
-                                <span class="qualification__subtitle">Bir Shreshtha Munshi Abdur Rouf Public
-                                    College</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    January, 2010 - May, 2012
-                                </div>
-                            </div>
-
                             <div>
                                 <span class="qualification__rounder"></span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
 
                     <!--===============================QUALIFICATION CONTENT 2 ===========================-->
