--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">MSc in IT and Strategic Innovation</h3>
-                                <span class="qualification__subtitle">Kingston University</span>
+                                <span class="qualification__subtitle">Kingston University London</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     Jan, 2023 (Reading)
