--- a/expeditions/index.html
+++ b/expeditions/index.html
@@ -21,8 +21,8 @@
   <link rel="icon" type="image/png" href="#" sizes="48x48">
   <!-- PERFORMANCE -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
-  <link rel="preload" as="style" href="custom.css">
-  <link rel="stylesheet" href="custom.css">
+  <link rel="preload" as="style" href="./expeditions/custom.css">
+  <link rel="stylesheet" href="./expeditions/custom.css">
   <!-- TITLE -->
   <title>Kiwi is here 🥝 | Journeys</title>
 </head>
@@ -36,7 +36,7 @@
           <!-- <svg viewBox="0 0 18 18" height="18" width="18" role="img" aria-label="#">
             <path fill="#353535" d="M0 0h4.5v9a4.5 4.5 0 109 0V6H18v3A9 9 0 110 9V0zm18 4.5V0h-4.5v4.5H18z" />
           </svg> -->
-          <img src="assets/logo.svg" alt="logo">
+          <img src="/expeditions/assets/logo.svg" alt="logo">
         </a>
         <!-- MENU -->
         <a href="https://twitter.com/kiwiyaaaa" role="link" aria-label="#">
@@ -157,7 +157,7 @@
                   d="M10.833 0c.143.972-.253 1.924-.775 2.598-.558.722-1.52 1.28-2.453 1.252-.17-.93.266-1.89.796-2.534C8.983.605 9.98.06 10.833 0zm2.8 13.679c.481-.737.66-1.108 1.034-1.94-2.714-1.032-3.149-4.89-.463-6.371-.82-1.027-1.97-1.623-3.057-1.623-.783 0-1.32.204-1.807.39-.407.155-.78.297-1.232.297-.49 0-.924-.156-1.378-.318-.499-.18-1.022-.367-1.672-.367-1.22 0-2.517.745-3.34 2.019-1.157 1.794-.96 5.167.916 8.04.67 1.028 1.566 2.183 2.738 2.194.486.005.81-.14 1.16-.298.4-.18.836-.375 1.59-.379.76-.004 1.188.194 1.583.376.341.157.658.303 1.14.298 1.172-.01 2.118-1.29 2.788-2.318z" />
               </svg>
               <span>Download</span> -->
-              <img src="assets/youtube.svg" />
+              <img src="/expeditions/assets/youtube.svg" />
             </a>
             <!-- PLAY STORE -->
             <a href="#" role="link" aria-label="#"
@@ -167,7 +167,7 @@
                   d="M1.478 0l7.998 8-7.997 8A.783.783 0 011 15.277V.723A.785.785 0 011.478 0zm8.553 8.555l1.808 1.808-8.59 4.974 6.782-6.782zm2.513-2.511l2.204 1.277a.786.786 0 010 1.358l-2.205 1.277L10.586 8l1.958-1.956zM3.249.663l8.591 4.973-1.809 1.809L3.25.663z" />
               </svg>
               <span>Download</span> -->
-              <img src="assets/tiktok.svg" />
+              <img src="/expeditions/assets/tiktok.svg" />
             </a>
           </div>
         </div>
