--- a/expeditions/index.html
+++ b/expeditions/index.html
@@ -62,13 +62,13 @@
             <!-- APP STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="assets/youtube.svg" />
+              <img src="/expeditions/assets/youtube.svg" />
               <!-- <span>Watch</span> -->
             </a>
             <!-- PLAY STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="assets/tiktok.svg" />
+              <img src="/expeditions/assets/tiktok.svg" />
               <!-- <span>Watch</span> -->
             </a>
           </div>
