--- a/index.html
+++ b/index.html
@@ -193,9 +193,26 @@
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
 
+                    <!--======================== PORTFOLIO 0 =============-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-4.png" alt="" class="portfolio__img">
 
-                     <!--======================== PORTFOLIO 0 =============-->
-                     <div class="portfolio__content grid swiper-slide">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">The Potter Collective</h3>
+                            <p class="portfolio__description">
+                                Harry Potter Collection
+                            </p>
+                            <a href="https://pottercollective.vercel.app"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <!--======================== PORTFOLIO 1 =============-->
+                    <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-0.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -211,7 +228,7 @@
                         </div>
                     </div>
 
-                    <!--======================== PORTFOLIO 1 =============-->
+                    <!--======================== PORTFOLIO 2 =============-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-1.png" alt="" class="portfolio__img">
 
@@ -230,7 +247,7 @@
 
 
 
-                    <!--======================== PORTFOLIO 2 =============-->
+                    <!--======================== PORTFOLIO 3 =============-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-2.png" alt="" class="portfolio__img">
 
@@ -248,7 +265,7 @@
                     </div>
 
 
-                    <!--======================== PORTFOLIO 3 =============-->
+                    <!--======================== PORTFOLIO 4 =============-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-3.png" alt="" class="portfolio__img">
 
@@ -257,13 +274,15 @@
                             <p class="portfolio__description">
                                 Digital restaurant menu.
                             </p>
-                            <a href="https://theceyloncurryhouse.netlify.app/index_v2.html" 
+                            <a href="https://theceyloncurryhouse.netlify.app/index_v2.html"
                                 class="button button--flex button--small portfolio__button">
                                 <!-- <i class="uil uil-play button__icon__play"></i> -->
                                 Visit
                             </a>
                         </div>
                     </div>
+
+
 
                     <!--======================== PORTFOLIO 4 =============-->
                     <!-- <div class="portfolio__content grid swiper-slide">
@@ -482,7 +501,7 @@
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
-                
+
                     <div class="qualification__button button--flex qualification__active" data-target="#work">
                         <i class="uil uil-briefcase-alt qualification__icon"></i>
                         Work
@@ -553,9 +572,9 @@
 
                     <!--===============================QUALIFICATION CONTENT 2 ===========================-->
                     <div class="qualification__content qualification__active" data-content id="work">
-                       
-                         <!--===============================QUALIFICATION 0 ===========================-->
-                         <div class="qualification__data">
+
+                        <!--===============================QUALIFICATION 0 ===========================-->
+                        <div class="qualification__data">
                             <div></div>
                             <div>
                                 <span class="qualification__rounder"></span>
@@ -821,7 +840,7 @@
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YRxlAvVio/" 
+                            <a href="https://fb.watch/7YRxlAvVio/"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
