Added another project

--- a/index.html
+++ b/index.html
@@ -282,6 +282,22 @@
                         </div>
                     </div>
 
+                      <!--======================== PORTFOLIO 5 =============-->
+                      <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-5.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Flappy Frenzy</h3>
+                            <p class="portfolio__description">
+                                An HTML5 Game built for fun
+                            </p>
+                            <a href="https://kiwigamesflap.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
 
 
                     <!--======================== PORTFOLIO 4 =============-->
