--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="assets/img/logo.jpg" />
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -19,7 +20,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nav.css">
 
-    <title>Kiwi is here 🥝</title>
+    <title>Kavinda is here 🥝</title>
 </head>
 
 <body>
@@ -117,7 +118,7 @@
 
                     </div>
                     <div class="home__data">
-                        <h1 class="home__title">Hello from Kiwi</h1>
+                        <h1 class="home__title">Hello from Kavinda</h1>
                         <h3 class="home__subtitle">Designer Developer</h3>
                         <p class="home__description">High level experience in web application development and producing
                             designs.</p>
@@ -1034,7 +1035,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Kiwiyaaa. All rights reserved.</p>
+            <p class="footer__copy">&#169; Kavinda Sumanaweera. All rights reserved.</p>
         </div>
 
     </footer>
