Meta Tag Update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/img/logo.jpg" />
+    
+    <!-- Primary Meta Tags -->
+    <title>Hello from Kavinda | Designer | Developer</title>
+    <meta name="title" content="Hello from Kavinda | Designer | Developer" />
+    <meta name="description" content="High level experience in web application development and producing designs." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kavinda.vercel.app/" />
+    <meta property="og:title" content="Hello from Kavinda | Designer | Developer" />
+    <meta property="og:description" content="High level experience in web application development and producing designs." />
+    <meta property="og:image" content="https://kavinda.vercel.app/assets/img/logo.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kavinda.vercel.app/" />
+    <meta property="twitter:title" content="Hello from Kavinda | Designer | Developer" />
+    <meta property="twitter:description" content="High level experience in web application development and producing designs." />
+    <meta property="twitter:image" content="https://kavinda.vercel.app/assets/img/logo.jpg" />
+
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -19,8 +38,6 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nav.css">
-
-    <title>Kavinda is here 🥝</title>
 </head>
 
 <body>
@@ -283,8 +300,8 @@
                         </div>
                     </div>
 
-                      <!--======================== PORTFOLIO 5 =============-->
-                      <div class="portfolio__content grid swiper-slide">
+                    <!--======================== PORTFOLIO 5 =============-->
+                    <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-5.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
