--- a/index.html
+++ b/index.html
@@ -129,16 +129,15 @@
             165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403
             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028
             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="12" y="18" xlink:href="assets/img/perfil.png" />
+                                <image class="home__blob-img" x="12" y="18" xlink:href="assets/img/profile.png" />
                             </g>
                         </svg>
 
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">Hello from Kavinda</h1>
-                        <h3 class="home__subtitle">Designer Developer</h3>
-                        <p class="home__description">High level experience in web application development and producing
-                            designs.</p>
+                        <h3 class="home__subtitle">Developer. Designer.</h3>
+                        <p class="home__description">Designer crafting masterpieces. Developer blending tech and creativity.</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -165,10 +164,7 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        I'm a UI Designer and a Front End Developer from Colombo Sri Lanka.
-                        I enjoy taking complex problems and turning them into simple and beautiful interface designs. I
-                        also love the logic and structure of coding and always strive to write elegant and efficient
-                        code.
+                        Kandy, Srilanka-based UI Designer & Front End Developer crafting immersive interfaces with HTML, CSS, and React. Specializing in Next.js, I blend tech prowess with creative finesse to deliver elegant and efficient code.
                         <br>
                         <br>
                         <a class="view-button-portfolio  active-link-alt" href="https://kavindafolio.carrd.co/"
@@ -376,8 +372,88 @@
 
             <div class="skills__container container grid">
                 <div>
+                    
                     <!--====================== SKILLS 1 =============================-->
+
                     <div class="skills__content skills__open">
+                        <div class="skills__header">
+                            <i class="uil uil-brackets-curly skills__icon"></i>
+
+                            <div>
+                                <h1 class="skills__title">Development</h1>
+                                <span class="skills__subtitle">More than 5 years</span>
+                            </div>
+
+                            <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">React</h3>
+                                    <div class="skills__number">82%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__react"></div>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Tailwind</h3>
+                                    <div class="skills__number">90%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__bootstrap"></div>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Bootstrap</h3>
+                                    <div class="skills__number">90%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__bootstrap"></div>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Javascript</h3>
+                                    <div class="skills__number">90%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__javascript"></div>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">React Native</h3>
+                                    <div class="skills__number">80%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__react"></div>
+                                </div>
+                            </div>
+
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Flutter</h3>
+                                    <div class="skills__number">60%</div>
+                                </div>
+                                <div class="skills__bar">
+                                    <div class="skills__percentage skills__flutter"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                 
+                    <!--====================== SKILLS 2 =============================-->
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-brush-alt skills__icon"></i>
 
@@ -432,61 +508,6 @@
                         </div>
                     </div>
 
-                    <!--====================== SKILLS 2 =============================-->
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <i class="uil uil-brackets-curly skills__icon"></i>
-
-                            <div>
-                                <h1 class="skills__title">Development</h1>
-                                <span class="skills__subtitle">More than 3 year</span>
-                            </div>
-
-                            <i class="uil uil-angle-down skills__arrow"></i>
-                        </div>
-
-                        <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">React</h3>
-                                    <div class="skills__number">82%</div>
-                                </div>
-                                <div class="skills__bar">
-                                    <div class="skills__percentage skills__react"></div>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Bootstrap</h3>
-                                    <div class="skills__number">90%</div>
-                                </div>
-                                <div class="skills__bar">
-                                    <div class="skills__percentage skills__bootstrap"></div>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Javascript</h3>
-                                    <div class="skills__number">90%</div>
-                                </div>
-                                <div class="skills__bar">
-                                    <div class="skills__percentage skills__javascript"></div>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Flutter</h3>
-                                    <div class="skills__number">60%</div>
-                                </div>
-                                <div class="skills__bar">
-                                    <div class="skills__percentage skills__flutter"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div>
                         <!--====================== SKILLS 3 =============================-->
@@ -557,7 +578,7 @@
                                 <span class="qualification__subtitle">Kingston University London</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Jan, 2023 (Reading)
+                                    Jan, 2023 - Jan, 2024
                                 </div>
                             </div>
 
@@ -576,11 +597,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">BSc. in Computer Science</h3>
-                                <span class="qualification__subtitle">University of Westminster</span>
+                                <h3 class="qualification__title">BCS Certificate Level</h3>
+                                <span class="qualification__subtitle">BCS, The Chartered Institute for IT</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Aug, 2017 - Sept, 2021
+                                    Mar, 2022 - Sept, 2022
                                 </div>
                             </div>
 
