--- a/old/index.html
+++ b/old/index.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class="home__img">
-                <img src="assets/img/perfil.png" alt="">
+                <img src="assets/img/profile.png" alt="">
             </div>
         </section>
 
