--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Hello from Kavinda | Designer | Developer</title>
+    <title>Hello from Kavinda | Developer | Designer</title>
     <meta name="title" content="Hello from Kavinda | Designer | Developer" />
     <meta name="description" content="High level experience in web application development and producing designs." />
 
@@ -47,6 +47,7 @@
         <nav class="nav container">
             <a href="#" class="nav__logo">
                 <img src="logo.svg" alt="">
+                <!-- <h1 class="kavinda-logo">Kavinda</h1> -->
             </a>
             <!-- <a href="#" class="nav__logo">
                 <img src="logo.svg" alt="">
@@ -135,7 +136,7 @@
 
                     </div>
                     <div class="home__data">
-                        <h1 class="home__title">Hello from Kavinda</h1>
+                        <h1 class="home__title">Hi 👋 I'm Kavinda</h1>
                         <h3 class="home__subtitle">Developer. Designer.</h3>
                         <p class="home__description">Designer crafting masterpieces. Developer blending tech and creativity.</p>
                         <a href="#contact" class="button button--flex">
@@ -1037,7 +1038,7 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title"> <img src="logo_white.svg" alt=""></h1>
+                    <img class="footer-logo" src="logo-white.svg" alt="">
                     <!-- <span class="footer__subtitle">Full Stack Developer</span> -->
                 </div>
 
