--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="logo.svg" alt="">
+                <img class="nav-logo" src="logo.svg" alt="">
                 <!-- <h1 class="kavinda-logo">Kavinda</h1> -->
             </a>
             <!-- <a href="#" class="nav__logo">
