--- a/index.html
+++ b/index.html
@@ -314,6 +314,23 @@
                         </div>
                     </div>
 
+                       <!--======================== PORTFOLIO 6 =============-->
+                       <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-6.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Tour Website</h3>
+                            <p class="portfolio__description">
+                                A hero section for tour website
+                            </p>
+                            <a href="https://w3b-0001.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
 
                     <!--======================== PORTFOLIO 4 =============-->
                     <!-- <div class="portfolio__content grid swiper-slide">
